# GnuTLS-work

./: README.md  RSA_KeysGenerator.c  RSA_KeysGenerator.py  RSA_results.csv
ECC_Keys_generation/: CMakeLists.txt  Makefile  ecdsa.c  results.txt
KeysGenerationFlow/: Untitled Diagram(1).drawio
Plots_Stuff/: plotter.py
RSA_Keys_Generation/: Makefile  RSA_KeysGenerator.py  RSA_keys_generation_flow.txt  RSA_keys_links.txt  rsa.c
side_chanel_analyzis/: CMakeLists.txt
side_chanel_analyzis/RSA_sidechannel/: FunctionToAnalyze  HHWData_DataSign_keyX.txt  HHWData_HashedDataSign_keyX.txt  LHWData_DataSign_keyX.txt  LHWData_HashedDataSign_keyX.txt  main  main.c  main_thread2  rsa_analyzer.c  rsa_analyzer.h  tasks.txt  temp2  temp3  temp_main.tmp
side_chanel_analyzis/RSA_sidechannel/results/: HHWData_DataSign_keyX.txt  LHWData_DataSign_keyX.txt  LHWRSAKey_SignData.txt  LHWRSAKey_SignHashedData.txt
side_chanel_analyzis/src/: common.c  common.h  ecc_analyze.c  ecc_analyze.h  main.c  utils.c  utils.h
